kubernetes/kubernetes.yml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: %FEATURE%test-kafka-consumer
  namespace: %NAMESPACE%
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: %FEATURE%document-ods
        serverpod: %FEATURE%test-kafka-consumer
    spec:
      imagePullSecrets:
      - name: cluster-registry-bluemix
      containers:
      - name: %FEATURE%test-kafka-consumer
        image: %DOCKER_REGISTRY%/%DOCKER_REPOSITORY%/test-kafka-consumer:%IMAGE_TAG%
        imagePullPolicy: Always
        ports:
        - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: %FEATURE%document-ods
  name: %FEATURE%test-kafka-consumer
  namespace: %NAMESPACE%
spec:
  ports:
  - port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    serverpod: %FEATURE%test-kafka-consumer
  type: ClusterIP
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: %FEATURE%test-kafka-consumer
  namespace: %NAMESPACE%
spec:
  rules:
  - host: %URL%.intern.test.sda-se.com
    http:
      paths:
      - backend:
          serviceName: %FEATURE%test-kafka-consumer
          servicePort: 8080
        path: /
  - host: minio.%URL%.intern.test.sda-se.com
    http:
      paths:
      - backend:
          serviceName: %FEATURE%document-ods-minio
          servicePort: 9000
        path: /
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: %FEATURE%document-ods-mongodb
  namespace: %NAMESPACE%
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: %FEATURE%document-ods-mongodb
        serverpod: %FEATURE%document-ods-mongodb
    spec:
      imagePullSecrets:
      - name: cluster-registry-bluemix
      containers:
      - name: %FEATURE%document-ods-mongodb
        image: %DOCKER_REGISTRY%/%DOCKER_REPOSITORY%/sda-mongo:4.0.0
        imagePullPolicy: Always
        resources:
          limits:
            memory: 256Mi
          requests:
            memory: 128Mi
        ports:
        - containerPort: 27017
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: %FEATURE%document-ods-mongodb
  name: %FEATURE%document-ods-mongodb
  namespace: %NAMESPACE%
spec:
  ports:
  - port: 27017
    protocol: TCP
    targetPort: 27017
  selector:
    serverpod: %FEATURE%document-ods-mongodb
  type: ClusterIP
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: %FEATURE%document-ods-minio
  namespace: %NAMESPACE%
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: %FEATURE%document-ods
        serverpod: %FEATURE%document-ods-minio
    spec:
      containers:
      - name: %FEATURE%document-ods-minio
        image: minio/minio:latest
        args:
        - server
        - /storage
        ports:
        - containerPort: 9000
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: %FEATURE%document-ods
  name: %FEATURE%document-ods-minio
  namespace: %NAMESPACE%
spec:
  ports:
  - port: 9000
    protocol: TCP
    targetPort: 9000
  selector:
    serverpod: %FEATURE%document-ods-minio
  type: ClusterIP
